# agent_test_1

./: .gitignore  README.md  pom.xml  prd.md  pyproject.toml
configs/: front_running_detection.yml  spoofing_detection.yml  wash_trade_detection.yml
src/: __init__.py  agent.py  cli.py  config_searcher.py  email_parser.py  java_executor.py  mcp_server.py
src/main/java/com/surveillance/core/: DetectionResult.java  Parameter.java  ReportGenerator.java
src/main/java/com/surveillance/detectors/: FrontRunningDetector.java  SpoofingDetector.java  WashTradeDetector.java
src/test/java/com/surveillance/tests/: FrontRunningDetectionTest.java  SpoofingDetectionTest.java  WashTradeDetectionTest.java
tests/: test_agent.py
